--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>este es mi primer archivo</h1>
+    <h1>este es mi primer archivo html</h1>
   </body>
 </html>
